[package]
name = "lineiform"
version = "0.1.0"
authors = ["Charlie Cummings <chc4000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0-alpha1"
jemallocator = "0.3.2"
thiserror = "1.0"
enum-display-derive = "0.1.1"
goblin = "0.4"
lazy_static = "1.4.0"
bitvec = "0.22.3"

yaxpeax-arch = "0.2.5"

cranelift = "0.75.0"
cranelift-codegen = "0.75.0"
cranelift-jit = "0.75.0"
cranelift-module = "0.75.0"
target-lexicon = "0.12.1"

[dependencies.yaxpeax-x86]
version = "1.0.4"
features = ["fmt"]

[profile.dev]
opt-level = 2 # we use tailcalls a lot, which will blow the stack on O0

[profile.release]
debug = false
opt-level = 3
overflow-checks = true
panic = "abort"
