[package]
name = "simplejit"
version = "0.1.0"
authors = ["Charlie Cummings <chc4000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 2 # we use tailcalls a lot, which will blow the stack on O0

[profile.release]
debug = false
opt-level = 3
overflow-checks = true
panic = "abort"

[workspace]

members = [
    "tangle",
    "lineiform"
]
