[package]
name = "tangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
lazy_static = "1.4.0"
yaxpeax-arch = "0.2.5"
dynasm = "1.1.0"
dynasmrt = "1.1.0"
ena = "0.14.0"
rangemap = "0.1.11"

[dependencies.yaxpeax-x86]
version = "1.0.4"
features = ["fmt"]
path = "../../yaxpeax-x86" # FIXME when yax x86 1.1 comes out
